# gst-myfilter

./: .gitignore  README.md
gst-myfilter/: Makefile  Makefile.in  config.h  config.status  configure  configure.ac  libtool
gst-myfilter/autom4te.cache/: output.0  requests  traces.0  traces.1  traces.2
gst-myfilter/plugins/: Makefile  Makefile.am  Makefile.in  gstmyfilter.c  gstmyfilter.c~  gstmyfilter.h  gstmyfilterplugin.c  libgstmyfilter.la  libgstmyfilter_la-gstmyfilter.lo  libgstmyfilter_la-gstmyfilterplugin.lo
gst-myfilter/plugins/.deps/: libgstmyfilter_la-gstmyfilter.Plo  libgstmyfilter_la-gstmyfilterplugin.Plo
gst-myfilter/plugins/.libs/: libgstmyfilter.exp  libgstmyfilter.la  libgstmyfilter.lai  libgstmyfilter.ver
gst-myfilter/tools/: Makefile  Makefile.am  Makefile.in  gst-myfilter  gstmyfilter.c
gst-myfilter/tools/.deps/: gst_myfilter-gstmyfilter.Po
