plugin_LTLIBRARIES = libgstmyfilter.la

# sources used to compile this plug-in
libgstmyfilter_la_SOURCES = gstmyfilterplugin.c gstmyfilter.c gstmyfilter.h

# compiler and linker flags used to compile this plugin, set in configure.ac
libgstmyfilter_la_CFLAGS = $(GST_CFLAGS)
libgstmyfilter_la_LIBADD = $(GST_LIBS)
libgstmyfilter_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)

